major important fixes to typography front and back end

--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/teasers/_events-teaser.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/teasers/_events-teaser.scss
@@ -43,6 +43,7 @@
 				margin: $base-margin 0 $half-margin 0;
 				font-weight: 700;
 				font-size: var(--wp--preset--font-size--16-24);
+				line-height: 24px;
 			}
 
 			// ? set to specific brand value for now
