--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_typography.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_typography.scss
@@ -17,6 +17,7 @@ a {
 
 // * enable RFS for the existing theme.json font sizes
 // * RFS will auto-convert these to REM (16px === 1rem && 36px === 2rem)
+:root,
 body {
 	@include rfs(128px, --wp--preset--font-size--128-128);
 	@include rfs(96px, --wp--preset--font-size--96-96);
@@ -31,4 +32,26 @@ body {
 	@include rfs(16px, --wp--preset--font-size--16-24);
 	@include rfs(14px, --wp--preset--font-size--14-20);
 	@include rfs(12px, --wp--preset--font-size--12-16);
+}
+
+$fz_lh_pairs: (
+	"128": "128",
+	"96": "96",
+	"72": "72",
+	"60": "60",
+	"48": "48",
+	"36": "40",
+	"30": "36",
+	"24": "32",
+	"20": "28",
+	"18": "28",
+	"16": "24",
+	"14": "20",
+	"12": "16",
+);
+
+@each $fz, $lh in $fz_lh_pairs {
+	.has-#{$fz}-#{$lh}-font-size {
+		@include rfs(#{$lh}px, line-height);
+	}
 }
