quick fix to cover block

--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/_cover.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/_cover.scss
@@ -13,6 +13,12 @@
 				margin: $base-margin auto 0 auto;
 			}
 		}
+		> :is(:not(.wp-block-cover__inner-container)) {
+			@include media("<=large"){
+				padding-left: 0 !important;
+				padding-right: 0 !important;
+			}
+		}
 	}
 
 	.wp-block-cover__inner-container {
