--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/_index.scss
@@ -1,6 +1,7 @@
 @import './breadcrumbs.scss';
 @import './button.scss';
 @import './column.scss';
+@import './content-query';
 @import './cover.scss';
 @import './date-time.scss';
 @import './group.scss';
