--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/teasers/_projects-teaser.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/teasers/_projects-teaser.scss
@@ -2,45 +2,61 @@
 
 */
 
-.nu__grid {
+.nu__grid .grid-item.nu_projects {
+	position: relative;
 
-
-	.grid-item.nu_projects {
-		
+	.contains-clickable-area {
 		position: relative;
-
-		.contains-clickable-area {
-			position: relative;
-		}
-		
-
-		.grid-item-content {
-			position: absolute;
-			bottom: $base-margin;
-			left: $base-margin;
-			max-width: 80%;
-			padding: $base-margin;
-			background-color: var(--wp--preset--color--white-1);
-			.post-title {
-				margin-top: 0;
-			}
-			.post-excerpt {
-				margin-bottom: 0;
-			}
-			.is-hanging-icon {
-				background-color: var(--wp--preset--color--white-1);
-				position: absolute;
-				top: 0;
-				right: 0;
-				transform: translateX(100%);
-				.material-icons-outlined {
-					font-size: 30px;
-					line-height: 30px;
-					transform: rotate(-45deg);
-				}
+		height: 100%;
+		figure {
+			height: 100%;
+			img {
+				min-height: 100%;
 			}
 		}
-		
 	}
+
+	.grid-item-content {
+		position: absolute;
+		bottom: $base-margin;
+		left: $base-margin;
+		max-width: 80%;
+		padding: $base-margin;
+		background-color: var(--wp--preset--color--white-1);
+		.post-title {
+			margin-top: 0;
+		}
+		.post-excerpt {
+			margin-bottom: 0;
+		}
+		.is-hanging-icon {
+			background-color: var(--wp--preset--color--white-1);
+			position: absolute;
+			top: 0;
+			right: 0;
+			transform: translateX(100%);
+			.material-icons-outlined {
+				font-size: 30px;
+				line-height: 30px;
+				transform: rotate(-45deg);
+			}
+		}
+	}
+
+
+	&.has-layout-horizontal {
+		figure {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 1;
+		}
+		.grid-item-content {
+			z-index: 2;
+		}
+	}
+	
 	
 }
