touch ups pushing for MVP

--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/_index.scss
@@ -1,18 +1,19 @@
-@import './breadcrumbs.scss';
-@import './button.scss';
-@import './column.scss';
+@import './breadcrumbs';
+@import './button';
+@import './column';
 @import './content-query';
-@import './cover.scss';
-@import './date-time.scss';
-@import './group.scss';
-@import './mediatext.scss';
-@import './navigation.scss';
-@import './paragraph.scss';
-@import './person-info.scss';
-@import './posts-grid.scss';
-@import './pullquote.scss';
-@import './separator.scss';
-@import './table.scss';
+@import './cover';
+@import './date-time';
+@import './group';
+@import './mediatext';
+@import './news-info';
+@import './navigation';
+@import './paragraph';
+@import './person-info';
+@import './posts-grid';
+@import './pullquote';
+@import './separator';
+@import './table';
 
 //
 @import './get-meta/event-info';
