--- a/wp-content/themes/nu-start/__precomp/source/css/patterns/patterns.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/patterns/patterns.scss
@@ -11,6 +11,9 @@
 // 
 @import "./content-types/people-related-patterns";
 @import "./content-types/event-related-patterns";
+@import "./content-types/news-related-patterns";
+@import "./content-types/project-related-patterns";
+@import "./content-types/profile-related-patterns";
 
 
 // 
