dropping child theme

--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/teasers/_profile-teaser.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/teasers/_profile-teaser.scss
@@ -3,25 +3,24 @@
 */
 
 .nu__grid {
-
-
 	.grid-item.nu_profiles {
-		
 		position: relative;
 		
-
 		.grid-item-content {
 			position: relative;
-			padding: $base-margin;
-			background-color: var(--wp--preset--color--white-1);
 			.post-title {
+				font-size: var(--wp--preset--font-size--30-36);
+				line-height: 36px;
+				font-weight: 300;
 				margin-top: 0;
 			}
 			.post-excerpt {
+				margin-top: $margin_2x;
 				margin-bottom: 0;
+				font-weight: 700;
+				font-size: var(--wp--preset--font-size--20-28);
 			}
 			.is-hanging-icon {
-				background-color: var(--wp--preset--color--white-1);
 				position: absolute;
 				top: 0;
 				right: 0;
@@ -33,7 +32,12 @@
 				}
 			}
 		}
+
+		&.has-layout-horizontal {
+			.is-hanging-icon {
+				transform: translateY(0);
+			}
+		}
 		
 	}
-	
 }
