--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/_index.scss
@@ -1,9 +1,8 @@
 // 
 @import './src/basic-page-layout';
-@import './src/navlinks';
 @import './src/footer';
 @import './src/header';
-@import './src/search';
+@import './src/searchresults';
 @import './src/site-logo';
 @import './src/widgets-as-alerts';
 @import './src/nu_global_elements';
