--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_footer.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_footer.scss
@@ -224,7 +224,7 @@ footer.site-footer {
 	//
 	.footer-siteinfo {
 		> .logo {
-			margin-top: $margin_2x;
+			margin: $margin_2x 0;
 		}
 		.address,
 		.contact,
