--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/_index.scss
@@ -14,6 +14,7 @@
 @import './pullquote';
 @import './separator';
 @import './table';
+@import './tabbed-content';
 
 //
 @import './get-meta/event-info';
