--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/_posts-grid.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/_posts-grid.scss
@@ -26,6 +26,12 @@
 		padding: 0;
 	}
 
+	.is-hanging-icon {
+		// display: none;
+		padding: 4px;
+	}
+	
+	
 	a.contains-clickable-area {
 		width: 100%;
 		height: 100%;
@@ -47,6 +53,7 @@
 
 	// ?
 	.nu__grid {
+		padding: $margin_2x 0;
 		@include nu__responsive_grid_layout();
 	}
 
@@ -54,7 +61,8 @@
 	.grid-item {
 		@include nu__grid_item_cover_ratios();
 		@include nu__grid_item_orientation();
-		background-color: var(--wp--preset--color--white-1);
+		background-color: var(--wp--custom--elems--teasers--base--background);
+		
 
 		&.has-layout-vertical {
 			figure {
