--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/header/_utilitynav.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/header/_utilitynav.scss
@@ -33,6 +33,7 @@ header.header {
 		@include media("<medium"){
 			$utilityNavHeight : 32px;
 			height: $utilityNavHeight;
+			display: none;
 		}
 	}
 }
