--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/header/_navlinks.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/header/_navlinks.scss
@@ -54,6 +54,20 @@ header.header {
 			color: inherit;
 			margin-top: -2px;
 		}
+		&:after {
+			content: "";
+			width: 0;
+			height: 0;
+			border-radius: 50%;
+			border: 2px solid var(--wp--preset--color--black-2);
+			display: inline-block;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			opacity: 0;
+			@extend %transition;
+		}
 	}
 	//
 	//
@@ -103,6 +117,11 @@ header.header {
 			}
 			> a + .navlinks-showsubmenu:before {
 				transform: rotate(90deg);
+			}
+			> a + .navlinks-showsubmenu:after {
+				width: 100%;
+				height: 100%;
+				opacity: 1;
 			}
 		}
 	}
@@ -264,66 +283,102 @@ header.header {
 //
 //
 @include media("<=medium") {
-	header.header {
-		> .container {
-			// .navlinks {
-			.navlinks--container {
-				display: none;
-				position: absolute;
-				top: 0;
-				left: 0;
+	header.header > .container {
+		//
+		//
+		//
+		.menu-item {
+			padding: $half-margin 0;
+			&:not(:first-child) {
+				border-top: 1px solid rgba(236, 233, 230, 1);
+			}
+		}
+
+		//
+		//
+		//
+		.menu-item.menu-item-has-children {
+			flex-flow: row wrap;
+			.sub-menu {
+				box-shadow: none;
+				background-color: var(--wp--preset--color--white-1);
+			}
+			> .sub-menu {
 				width: 100%;
-				flex-flow: column nowrap;
-				height: 100vh;
-				max-height: calc(100vh - $globalHeaderHeight - $headerHeight);
-				max-height: calc(100vh - $headerHeight);
-				max-width: 100%;
-				overflow: hidden;
-				overflow-y: auto;
-				background-color: rgba(244, 242, 240, 1);
-
-				//
-				//
-				//
-				> .navlinks {
-					> .menu {
-						flex-flow: column nowrap;
-					}
-				}
-
-				&.revealed {
-					display: flex;
-					flex-flow: column nowrap;
-					padding: $margin_2x;
-					> .navlinks {
-						order: 1;
-						margin-top: $margin_2x;
-					}
-					#nu__sitesearch {
-						display: block;
-						margin-top: $margin_2x;
-					}
-				}
+				padding: 0 $base-margin;
+				margin-top: $base-margin;
 			}
-			.menu-item {
-				padding: $base-margin 0;
-				&:not(:first-child) {
-					border-top: 1px solid rgba(236, 233, 230, 1);
-				}
-			}
-
-			.menu-item.menu-item-has-children {
-				flex-flow: row wrap;
-				.sub-menu {
-					box-shadow: none;
-					background-color: var(--wp--preset--color--white-1);
-				}
-				> .sub-menu {
-					width: 100%;
-					padding: 0 $margin_2x;
-					margin-top: $base-margin;
+		}
+		//
+		//
+		//
+		> .navicons {
+			&.revealed {
+				position: fixed;
+				top: $half-margin;
+				right: $half-margin;
+				z-index: 1;
+				height: auto;
+				span {
+					transform: translate(0, 0);
 				}
 			}
 		}
+
+		//
+		//
+		//
+
+		> .navlinks--container {
+			display: none;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100vh;
+			overflow: hidden;
+
+			//
+			//
+			//
+			> .navlinks {
+				height: calc(100% - 54px);
+				overflow-y: auto;
+				> .menu {
+					flex-flow: column nowrap;
+				}
+			}
+		}
+		//
+		//
+		//
+		> .navlinks--container.revealed {
+			display: flex;
+			flex-flow: column nowrap;
+			padding: $margin_3x 0 $base-margin 0;
+			background-color: rgba(244, 242, 240, 1);
+			// ? reverse order and set new margins
+			> .navlinks {
+				order: 1;
+				margin-top: $base-margin;
+				padding: 0 $base-margin;
+			}
+			//
+			#nu__sitesearch {
+				display: block;
+				margin-top: $base-margin;
+				height: $margin_3x;
+				padding: 0 $base-margin;
+			}
+		}
+
+		//
+		//
 	}
+}
+
+body.has-revealed-mobile-navmenu {
+	height: 100%;
+	max-height: 100%;
+	overflow: hidden;
 }
