--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/header/_search.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/header/_search.scss
@@ -35,6 +35,7 @@ header.header {
 			padding: $base-margin;
 			overflow: hidden;
 			form {
+				overflow: hidden;
 				padding: 0 $margin_2x;
 				height: 100%;
 				border-radius: 48px;
@@ -59,7 +60,8 @@ header.header {
 		//
 		#sitesearch-input {
 			margin: 0 $base-margin;
-			min-width: max(220px, 15vw);
+			width: max(300px, 15vw);
+			max-width: 100%;
 			padding: $base-margin;
 			border: 0px solid transparent;
 		}
@@ -108,7 +110,7 @@ header.header {
 				background-color: transparent;
 				transform: translateX(0);
 				width: 100%;
-				height: auto;
+				height: 100%;
 				justify-content: center;
 				padding: 0;
 				flex-flow: row nowrap;
@@ -118,6 +120,7 @@ header.header {
 					padding: 0 $base-margin;
 					max-width: 100%;
 					#sitesearch-input {
+						margin: 0;
 					}
 				}
 			}
